add new entries

--- a/db.bib
+++ b/db.bib
@@ -2808,30 +2808,6 @@ language={English}
   url       = {http://www.aclweb.org/anthology/P15-1129}
 }
 
-@InProceedings{dyer-EtAl:2015:ACL-IJCNLP,
-  author    = {Dyer, Chris  and  Ballesteros, Miguel  and  Ling, Wang  and  Matthews, Austin  and  Smith, Noah A.},
-  title     = {Transition-Based Dependency Parsing with Stack Long Short-Term Memory},
-  booktitle = {Proceedings of the 53rd Annual Meeting of the Association for Computational Linguistics and the 7th International Joint Conference on Natural Language Processing (Volume 1: Long Papers)},
-  month     = {July},
-  year      = {2015},
-  address   = {Beijing, China},
-  publisher = {Association for Computational Linguistics},
-  pages     = {334--343},
-  url       = {http://www.aclweb.org/anthology/P15-1033}
-}
-
-@InProceedings{zhang-nivre:2011:ACL-HLT2011,
-  author    = {Zhang, Yue  and  Nivre, Joakim},
-  title     = {Transition-based Dependency Parsing with Rich Non-local Features},
-  booktitle = {Proceedings of the 49th Annual Meeting of the Association for Computational Linguistics: Human Language Technologies},
-  month     = {June},
-  year      = {2011},
-  address   = {Portland, Oregon, USA},
-  publisher = {Association for Computational Linguistics},
-  pages     = {188--193},
-  url       = {http://www.aclweb.org/anthology/P11-2033}
-}
-
 @InProceedings{charniak-johnson:2005:ACL,
   author    = {Charniak, Eugene  and  Johnson, Mark},
   title     = {Coarse-to-Fine n-Best Parsing and MaxEnt Discriminative Reranking},
@@ -2931,4 +2907,21 @@ language={English}
   publisher = {Association for Computational Linguistics},
   pages     = {1611--1622},
   url       = {http://www.aclweb.org/anthology/D11-1149}
+}
+@article{DBLP:journals/corr/MnihKSGAWR13,
+  author    = {Volodymyr Mnih and
+               Koray Kavukcuoglu and
+               David Silver and
+               Alex Graves and
+               Ioannis Antonoglou and
+               Daan Wierstra and
+               Martin A. Riedmiller},
+  title     = {Playing Atari with Deep Reinforcement Learning},
+  journal   = {CoRR},
+  volume    = {abs/1312.5602},
+  year      = {2013},
+  url       = {http://arxiv.org/abs/1312.5602},
+  timestamp = {Wed, 01 Apr 2015 20:06:15 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/MnihKSGAWR13},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
 }
