--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1314,7 +1314,7 @@ url = {http://hal3.name/docs/#daume05search}
   month     = {June},
   year      = {2007},
   address   = {Prague, Czech Republic},
-  publisher = {ACL},
+  publisher = {Association for Computational Linguistics},
   pages     = {791--800},
   url       = {http://www.aclweb.org/anthology/D/D07/D07-1083}
 }
@@ -1349,11 +1349,11 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{riesa-marcu:2010:ACL,
   author    = {Riesa, Jason  and  Marcu, Daniel},
   title     = {Hierarchical Search for Word Alignment},
-  booktitle = {Proc. of ACL'10},
+  booktitle = {Proceedings of the 48th Annual Meeting of the Association for Computational Linguistics},
   month     = {July},
   year      = {2010},
   address   = {Uppsala, Sweden},
-  publisher = {ACL},
+  publisher = {Association for Computational Linguistics},
   pages     = {157--166},
   url       = {http://www.aclweb.org/anthology/P10-1017}
 }
@@ -1362,11 +1362,11 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{liu-liu-lin:2005:ACL,
   author    = {Liu, Yang  and  Liu, Qun  and  Lin, Shouxun},
   title     = {Log-Linear Models for Word Alignment},
-  booktitle = {Proc. of ACL'05},
+  booktitle = {Proceedings of the 43rd Annual Meeting of the Association for Computational Linguistics (ACL'05)},
   month     = {June},
   year      = {2005},
   address   = {Ann Arbor, Michigan},
-  publisher = {ACL},
+  publisher = {Association for Computational Linguistics},
   pages     = {459--466},
   url       = {http://www.aclweb.org/anthology/P05-1057},
   doi       = {10.3115/1219840.1219897}
@@ -1376,11 +1376,11 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{mann-mccallum:2008:ACLMain,
   author    = {Mann, Gideon S.  and  McCallum, Andrew},
   title     = {Generalized Expectation Criteria for Semi-Supervised Learning of Conditional Random Fields},
-  booktitle = {Proc. of ACL-08: HLT},
+  booktitle = {Proceedings of ACL-08: HLT},
   month     = {June},
   year      = {2008},
   address   = {Columbus, Ohio},
-  publisher = {ACL},
+  publisher = {Association for Computational Linguistics},
   pages     = {870--878},
   url       = {http://www.aclweb.org/anthology/P/P08/P08-1099}
 }
@@ -1389,11 +1389,11 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{smith-eisner:2008:EMNLP,
   author    = {Smith, David  and  Eisner, Jason},
   title     = {Dependency Parsing by Belief Propagation},
-  booktitle = {Proc. of EMNLP-2008},
+  booktitle = {Proceedings of the 2008 Conference on Empirical Methods in Natural Language Processing},
   month     = {October},
   year      = {2008},
   address   = {Honolulu, Hawaii},
-  publisher = {ACL},
+  publisher = {Association for Computational Linguistics},
   pages     = {145--156},
   url       = {http://www.aclweb.org/anthology/D08-1016}
 }
@@ -1404,7 +1404,7 @@ url = {http://hal3.name/docs/#daume05search}
     url = {http://www.lrec-conf.org/proceedings/lrec2012/pdf/274_Paper.pdf},
     note = {ACL Anthology Identifier: L12-1115},
     title = {A Universal Part-of-Speech Tagset},
-    booktitle = {Proc. of LREC-2012},
+    booktitle = {Proceedings of the Eighth International Conference on Language Resources and Evaluation (LREC-2012)},
     year = {2012},
     month = {May},
     address = {Istanbul, Turkey},
@@ -1418,7 +1418,7 @@ url = {http://hal3.name/docs/#daume05search}
 @inproceedings{McDonald:2006:MDA:1596276.1596317,
  author = {McDonald, Ryan and Lerman, Kevin and Pereira, Fernando},
  title = {Multilingual Dependency Analysis with a Two-stage Discriminative Parser},
- booktitle = {Proc. of CoNLL-2006},
+ booktitle = {Proceedings of the Tenth Conference on Computational Natural Language Learning},
  series = {CoNLL-X '06},
  year = {2006},
  location = {New York City, New York},
@@ -1426,7 +1426,7 @@ url = {http://hal3.name/docs/#daume05search}
  numpages = {5},
  url = {http://dl.acm.org/citation.cfm?id=1596276.1596317},
  acmid = {1596317},
- publisher = {ACL},
+ publisher = {Association for Computational Linguistics},
  address = {Stroudsburg, PA, USA},
 }
 
@@ -1456,11 +1456,11 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{rush-EtAl:2010:EMNLP,
   author    = {Rush, Alexander M  and  Sontag, David  and  Collins, Michael  and  Jaakkola, Tommi},
   title     = {On Dual Decomposition and Linear Programming Relaxations for Natural Language Processing},
-  booktitle = {Proc. of ACL-2010},
+  booktitle = {Proceedings of the 2010 Conference on Empirical Methods in Natural Language Processing},
   month     = {October},
   year      = {2010},
   address   = {Cambridge, MA},
-  publisher = {ACL},
+  publisher = {Association for Computational Linguistics},
   pages     = {1--11},
   url       = {http://www.aclweb.org/anthology/D10-1001}
 }
@@ -1469,7 +1469,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{martins-EtAl:2010:EMNLP,
   author    = {Martins, Andre  and  Smith, Noah  and  Xing, Eric  and  Aguiar, Pedro  and  Figueiredo, Mario},
   title     = {Turbo Parsers: Dependency Parsing by Approximate Variational Inference},
-  booktitle = {Proc. of EMNLP-2010},
+  booktitle = {EMNLP-2010},
   month     = {October},
   year      = {2010},
   address   = {Cambridge, MA},
@@ -1482,7 +1482,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{nivre-mcdonald:2008:ACLMain,
   author    = {Nivre, Joakim  and  McDonald, Ryan},
   title     = {Integrating Graph-Based and Transition-Based Dependency Parsers},
-  booktitle = {Proc. of ACL-2008},
+  booktitle = {ACL-2008},
   month     = {June},
   year      = {2008},
   address   = {Columbus, Ohio},
@@ -1495,20 +1495,20 @@ url = {http://hal3.name/docs/#daume05search}
 @inproceedings{nivre2005pseudo,
   title={Pseudo-projective dependency parsing},
   author={Nivre, Joakim and Nilsson, Jens},
-  booktitle={Proc. of ACL-2005},
+  booktitle={Proceedings of the 43rd Annual Meeting on Association for Computational Linguistics},
   pages={99--106},
   year={2005},
-  organization={ACL}
+  organization={Association for Computational Linguistics}
 }
 
 @InProceedings{fernandezgonzalez-gomezrodriguez:2012:EMNLP-CoNLL,
   author    = {Fern\'{a}ndez-Gonz\'{a}lez, Daniel  and  G\'{o}mez-Rodr\'{i}guez, Carlos},
   title     = {Improving Transition-Based Dependency Parsing with Buffer Transitions},
-  booktitle = {Proc. of EMNLP-2012},
+  booktitle = {Proceedings of the 2012 Joint Conference on Empirical Methods in Natural Language Processing and Computational Natural Language Learning},
   month     = {July},
   year      = {2012},
   address   = {Jeju Island, Korea},
-  publisher = {ACL},
+  publisher = {Association for Computational Linguistics},
   pages     = {308--319},
   url       = {http://www.aclweb.org/anthology/D12-1029}
 }
@@ -1517,7 +1517,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{zhang-mcdonald:2012:EMNLP-CoNLL,
   author    = {Zhang, Hao  and  McDonald, Ryan},
   title     = {Generalized Higher-Order Dependency Parsing with Cube Pruning},
-  booktitle = {Proc. of EMNLP-2012},
+  booktitle = {EMNLP-2012},
   month     = {July},
   year      = {2012},
   address   = {Jeju Island, Korea},
@@ -1530,11 +1530,11 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{koo-collins:2010:ACL,
   author    = {Koo, Terry  and  Collins, Michael},
   title     = {Efficient Third-Order Dependency Parsers},
-  booktitle = {Proc. of ACL-2010},
+  booktitle = {Proceedings of the 48th Annual Meeting of the Association for Computational Linguistics},
   month     = {July},
   year      = {2010},
   address   = {Uppsala, Sweden},
-  publisher = {ACL},
+  publisher = {Association for Computational Linguistics},
   pages     = {1--11},
   url       = {http://www.aclweb.org/anthology/P10-1001}
 }
@@ -1550,7 +1550,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{bohnet-nivre:2012:EMNLP-CoNLL,
   author    = {Bohnet, Bernd  and  Nivre, Joakim},
   title     = {A Transition-Based System for Joint Part-of-Speech Tagging and Labeled Non-Projective Dependency Parsing},
-  booktitle = {Proc. of EMNLP-2012},
+  booktitle = {EMNLP-2012},
   month     = {July},
   year      = {2012},
   address   = {Jeju Island, Korea},
@@ -1574,11 +1574,11 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{zhang-clark:2011:ACL-HLT2011,
   author    = {Zhang, Yue  and  Clark, Stephen},
   title     = {Shift-Reduce {CCG} Parsing},
-  booktitle = {Proc. of ACL-2011},
+  booktitle = {Proceedings of the 49th Annual Meeting of the Association for Computational Linguistics: Human Language Technologies},
   month     = {June},
   year      = {2011},
   address   = {Portland, Oregon, USA},
-  publisher = {ACL},
+  publisher = {Association for Computational Linguistics},
   pages     = {683--692},
   url       = {http://www.aclweb.org/anthology/P11-1069}
 }
@@ -1586,7 +1586,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{zhang-nivre:2011:ACL-HLT2011,
   author    = {Zhang, Yue  and  Nivre, Joakim},
   title     = {Transition-based Dependency Parsing with Rich Non-local Features},
-  booktitle = {Proc. of ACL-2011},
+  booktitle = {ACL-2011},
   month     = {June},
   year      = {2011},
   address   = {Portland, Oregon, USA},
@@ -1602,7 +1602,7 @@ url = {http://hal3.name/docs/#daume05search}
   month     = {June},
   year      = {2008},
   address   = {Columbus, Ohio},
-  publisher = {ACL},
+  publisher = {Association for Computational Linguistics},
   pages     = {888--896},
   url       = {http://www.aclweb.org/anthology/P/P08/P08-1101}
 }
@@ -1611,7 +1611,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{bohnet:2010:PAPERS,
   author    = {Bohnet, Bernd},
   title     = {Top Accuracy and Fast Dependency Parsing is not a Contradiction},
-  booktitle = {Proc. of Coling-2010},
+  booktitle = {Proceedings of the 23rd International Conference on Computational Linguistics (Coling 2010)},
   month     = {August},
   year      = {2010},
   address   = {Beijing, China},
@@ -1624,11 +1624,11 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{koo-EtAl:2010:EMNLP,
   author    = {Koo, Terry  and  Rush, Alexander M.  and  Collins, Michael  and  Jaakkola, Tommi  and  Sontag, David},
   title     = {Dual Decomposition for Parsing with Non-Projective Head Automata},
-  booktitle = {Proc. of EMNLP-2010},
+  booktitle = {Proceedings of the 2010 Conference on Empirical Methods in Natural Language Processing},
   month     = {October},
   year      = {2010},
   address   = {Cambridge, MA},
-  publisher = {ACL},
+  publisher = {Association for Computational Linguistics},
   pages     = {1288--1298},
   url       = {http://www.aclweb.org/anthology/D10-1125}
 }
@@ -1637,7 +1637,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{mcdonald-EtAl:2005:HLTEMNLP,
   author    = {McDonald, Ryan  and  Pereira, Fernando  and  Ribarov, Kiril  and  Hajic, Jan},
   title     = {Non-Projective Dependency Parsing using Spanning Tree Algorithms},
-  booktitle = {Proc. of EMNLP-2005},
+  booktitle = {EMNLP-2005},
   month     = {October},
   year      = {2005},
   address   = {Vancouver, British Columbia, Canada},
@@ -1650,7 +1650,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{goldberg-zhao-huang:2013:Short,
   author    = {Goldberg, Yoav  and  Zhao, Kai  and  Huang, Liang},
   title     = {Efficient Implementation of Beam-Search Incremental Parsers},
-  booktitle = {Proc. of ACL-2013},
+  booktitle = {ACL-2013},
   month     = {August},
   year      = {2013},
   address   = {Sofia, Bulgaria},
@@ -1663,11 +1663,11 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{zhu-EtAl:2013:ACL20131,
   author    = {Zhu, Muhua  and  Zhang, Yue  and  Chen, Wenliang  and  Zhang, Min  and  Zhu, Jingbo},
   title     = {Fast and Accurate Shift-Reduce Constituent Parsing},
-  booktitle = {Proc. of ACL-2013},
+  booktitle = {ACL-2013},
   month     = {August},
   year      = {2013},
   address   = {Sofia, Bulgaria},
-  publisher = {ACL},
+  publisher = {Association for Computational Linguistics},
   pages     = {434--443},
   url       = {http://www.aclweb.org/anthology/P13-1043}
 }
@@ -1676,7 +1676,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{nivre:2009:ACLIJCNLP,
   author    = {Nivre, Joakim},
   title     = {Non-Projective Dependency Parsing in Expected Linear Time},
-  booktitle = {Proc. of ACL-2009},
+  booktitle = {ACL-2009},
   month     = {August},
   year      = {2009},
   address   = {Suntec, Singapore},
@@ -1689,7 +1689,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{rush-petrov:2012:NAACL-HLT,
   author    = {Rush, Alexander  and  Petrov, Slav},
   title     = {Vine Pruning for Efficient Multi-Pass Dependency Parsing},
-  booktitle = {Proc. of NAACL-2012},
+  booktitle = {NAACL-2012},
   month     = {June},
   year      = {2012},
   address   = {Montr\'{e}al, Canada},
@@ -1702,7 +1702,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{choi-mccallum:2013:ACL2013,
   author    = {Choi, Jinho D.  and  McCallum, Andrew},
   title     = {Transition-based Dependency Parsing with Selectional Branching},
-  booktitle = {Proc. of ACL-2013},
+  booktitle = {ACL-2013},
   month     = {August},
   year      = {2013},
   address   = {Sofia, Bulgaria},
@@ -1715,7 +1715,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{zhang-EtAl:2013:ACL20131,
   author    = {Zhang, Meishan  and  Zhang, Yue  and  Che, Wanxiang  and  Liu, Ting},
   title     = {Chinese Parsing Exploiting Characters},
-  booktitle = {Proc. of ACL-2013},
+  booktitle = {ACL-2013},
   month     = {August},
   year      = {2013},
   address   = {Sofia, Bulgaria},
@@ -1728,7 +1728,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{huang-sagae:2010:ACL,
   author    = {Huang, Liang  and  Sagae, Kenji},
   title     = {Dynamic Programming for Linear-Time Incremental Parsing},
-  booktitle = {Proc. of ACL-2010},
+  booktitle = {ACL-2010},
   month     = {July},
   year      = {2010},
   address   = {Uppsala, Sweden},
@@ -1765,7 +1765,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{guo-EtAl:2014:EMNLP2014,
   author    = {Guo, Jiang  and  Che, Wanxiang  and  Wang, Haifeng  and  Liu, Ting},
   title     = {Revisiting Embedding Features for Simple Semi-supervised Learning},
-  booktitle = {Proc. of EMNLP-2014},
+  booktitle = {EMNLP-2014},
   month     = {October},
   year      = {2014},
   address   = {Doha, Qatar},
@@ -1777,7 +1777,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{jiang-EtAl:2013:ACL2013,
   author    = {Jiang, Wenbin  and  Sun, Meng  and  L\"{u}, Yajuan  and  Yang, Yating  and  Liu, Qun},
   title     = {Discriminative Learning with Natural Annotations: Word Segmentation as a Case Study},
-  booktitle = {Proc. of ACL-2013},
+  booktitle = {ACL-2013},
   month     = {August},
   year      = {2013},
   address   = {Sofia, Bulgaria},
@@ -1802,7 +1802,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{kim:2014:EMNLP2014,
   author    = {Kim, Yoon},
   title     = {Convolutional Neural Networks for Sentence Classification},
-  booktitle = {Proc. of EMNLP-2014},
+  booktitle = {EMNLP-2014},
   month     = {October},
   year      = {2014},
   address   = {Doha, Qatar},
@@ -1814,7 +1814,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{dyer-EtAl:2015:ACL-IJCNLP,
   author    = {Dyer, Chris  and  Ballesteros, Miguel  and  Ling, Wang  and  Matthews, Austin  and  Smith, Noah A.},
   title     = {Transition-Based Dependency Parsing with Stack Long Short-Term Memory},
-  booktitle = {Proc. of ACL-2015},
+  booktitle = {ACL-2015},
   month     = {July},
   year      = {2015},
   address   = {Beijing, China},
@@ -1826,7 +1826,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{pei-ge-chang:2014:P14-1,
   author    = {Pei, Wenzhe  and  Ge, Tao  and  Chang, Baobao},
   title     = {Max-Margin Tensor Neural Network for Chinese Word Segmentation},
-  booktitle = {Proc. of ACL-2014},
+  booktitle = {ACL-2014},
   month     = {June},
   year      = {2014},
   address   = {Baltimore, Maryland},
@@ -1838,7 +1838,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{ling-EtAl:2015:NAACL-HLT,
   author    = {Ling, Wang  and  Dyer, Chris  and  Black, Alan W  and  Trancoso, Isabel},
   title     = {Two/Too Simple Adaptations of Word2Vec for Syntax Problems},
-  booktitle = {Proc. of NAACL-2015},
+  booktitle = {NAACL-2015},
   month     = {May--June},
   year      = {2015},
   address   = {Denver, Colorado},
@@ -1863,7 +1863,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{yang-cardie:2012:EMNLP-CoNLL,
   author    = {Yang, Bishan  and  Cardie, Claire},
   title     = {Extracting Opinion Expressions with semi-Markov Conditional Random Fields},
-  booktitle = {Proc. of EMNLP-2012},
+  booktitle = {EMNLP-2012},
   month     = {July},
   year      = {2012},
   address   = {Jeju Island, Korea},
@@ -1875,7 +1875,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{passos-kumar-mccallum:2014:W14-16,
   author    = {Passos, Alexandre  and  Kumar, Vineet  and  McCallum, Andrew},
   title     = {Lexicon Infused Phrase Embeddings for Named Entity Resolution},
-  booktitle = {Proc. of CoNLL-2014},
+  booktitle = {CoNLL-2014},
   month     = {June},
   year      = {2014},
   address   = {Ann Arbor, Michigan},
@@ -1917,7 +1917,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{zheng-chen-xu:2013:EMNLP,
   author    = {Zheng, Xiaoqing  and  Chen, Hanyang  and  Xu, Tianyu},
   title     = {Deep Learning for {Chinese} Word Segmentation and {POS} Tagging},
-  booktitle = {Proc. of EMNLP-2013},
+  booktitle = {EMNLP-2013},
   month     = {October},
   year      = {2013},
   address   = {Seattle, Washington, USA},
@@ -1959,7 +1959,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{sun-EtAl:2009:NAACLHLT09,
   author    = {Sun, Xu  and  Zhang, Yaozhong  and  Matsuzaki, Takuya  and  Tsuruoka, Yoshimasa  and  Tsujii, Jun'ichi},
   title     = {A Discriminative Latent Variable Chinese Segmenter with Hybrid Word/Character Information},
-  booktitle = {Proc. of NAACL-2009},
+  booktitle = {NAACL-2009},
   month     = {June},
   year      = {2009},
   address   = {Boulder, Colorado},
@@ -1983,7 +1983,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{andrew:2006:EMNLP,
   author    = {Andrew, Galen},
   title     = {A Hybrid Markov/Semi-Markov Conditional Random Field for Sequence Segmentation},
-  booktitle = {Proc. of EMNLP-2006},
+  booktitle = {EMNLP-2006},
   month     = {July},
   year      = {2006},
   address   = {Sydney, Australia},
@@ -2037,7 +2037,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{okanohara-EtAl:2006:COLACL,
   author    = {Okanohara, Daisuke  and  Miyao, Yusuke  and  Tsuruoka, Yoshimasa  and  Tsujii, Jun'ichi},
   title     = {Improving the Scalability of Semi-Markov Conditional Random Fields for Named Entity Recognition},
-  booktitle = {Proc. of ACL-2006},
+  booktitle = {ACL-2006},
   month     = {July},
   year      = {2006},
   address   = {Sydney, Australia},
@@ -2049,7 +2049,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{pennington-socher-manning:2014:EMNLP2014,
   author    = {Pennington, Jeffrey  and  Socher, Richard  and  Manning, Christopher},
   title     = {Glove: Global Vectors for Word Representation},
-  booktitle = {Proc. of EMNLP-2014},
+  booktitle = {EMNLP-2014},
   month     = {October},
   year      = {2014},
   address   = {Doha, Qatar},
@@ -2083,7 +2083,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{narasimhan-kulkarni-barzilay:2015:EMNLP,
   author    = {Narasimhan, Karthik  and  Kulkarni, Tejas  and  Barzilay, Regina},
   title     = {Language Understanding for Text-based Games using Deep Reinforcement Learning},
-  booktitle = {Proc. of EMNLP-2015},
+  booktitle = {EMNLP-2015},
   month     = {September},
   year      = {2015},
   address   = {Lisbon, Portugal},
