--- a/db.bib
+++ b/db.bib
@@ -2925,3 +2925,15 @@ language={English}
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/MnihKSGAWR13},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
+@article{TACL302,
+	author = {Goldberg, Yoav  and Sartorio, Francesco  and Satta, Giorgio },
+	title = {A Tabular Method for Dynamic Oracles in Transition-Based Parsing},
+	journal = {Transactions of the Association for Computational Linguistics},
+	volume = {2},
+	year = {2014},
+	keywords = {},
+	abstract = {We develop parsing oracles for two transition-based dependency parsers, including the arc-standard parser, solving a problem that was left open in (Goldberg and Nivre, 2013). We experimentally show that using these oracles in training yields superior parsing accuracies on many languages.},
+	issn = {2307-387X},
+	url = {https://tacl2013.cs.columbia.edu/ojs/index.php/tacl/article/view/302},
+	pages = {119--130}
+}
