--- a/shortdb.bib
+++ b/shortdb.bib
@@ -48,7 +48,7 @@ language={English}
 @InProceedings{le-zuidema:2014:EMNLP2014,
   author    = {Le, Phong  and  Zuidema, Willem},
   title     = {The Inside-Outside Recursive Neural Network model for Dependency Parsing},
-  booktitle = {EMNLP-2014},
+  booktitle = {Proc. of EMNLP-2014},
   month     = {October},
   year      = {2014},
   address   = {Doha, Qatar},
@@ -60,7 +60,7 @@ language={English}
 @InProceedings{chen-manning:2014:EMNLP2014,
   author    = {Chen, Danqi  and  Manning, Christopher},
   title     = {A Fast and Accurate Dependency Parser using Neural Networks},
-  booktitle = {EMNLP-2014},
+  booktitle = {Proc. of EMNLP-2014},
   month     = {October},
   year      = {2014},
   address   = {Doha, Qatar},
@@ -1586,7 +1586,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{zhang-nivre:2011:ACL-HLT2011,
   author    = {Zhang, Yue  and  Nivre, Joakim},
   title     = {Transition-based Dependency Parsing with Rich Non-local Features},
-  booktitle = {Proc. of ACL-2011},
+  booktitle = {Proc. of ACL'11},
   month     = {June},
   year      = {2011},
   address   = {Portland, Oregon, USA},
@@ -1728,7 +1728,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{huang-sagae:2010:ACL,
   author    = {Huang, Liang  and  Sagae, Kenji},
   title     = {Dynamic Programming for Linear-Time Incremental Parsing},
-  booktitle = {Proc. of ACL-2010},
+  booktitle = {Proc. of ACL'10},
   month     = {July},
   year      = {2010},
   address   = {Uppsala, Sweden},
@@ -1814,7 +1814,7 @@ url = {http://hal3.name/docs/#daume05search}
 @InProceedings{dyer-EtAl:2015:ACL-IJCNLP,
   author    = {Dyer, Chris  and  Ballesteros, Miguel  and  Ling, Wang  and  Matthews, Austin  and  Smith, Noah A.},
   title     = {Transition-Based Dependency Parsing with Stack Long Short-Term Memory},
-  booktitle = {Proc. of ACL-2015},
+  booktitle = {Proc. of ACL'15},
   month     = {July},
   year      = {2015},
   address   = {Beijing, China},
@@ -2090,4 +2090,161 @@ url = {http://hal3.name/docs/#daume05search}
   publisher = {ACL},
   pages     = {1--11},
   url       = {http://aclweb.org/anthology/D15-1001}
+}
+
+@article{TACL302,
+	author = {Goldberg, Yoav  and Sartorio, Francesco  and Satta, Giorgio },
+	title = {A Tabular Method for Dynamic Oracles in Transition-Based Parsing},
+	journal = {Trans. of ACL},
+	volume = {2},
+	year = {2014},
+	keywords = {},
+	abstract = {We develop parsing oracles for two transition-based dependency parsers, including the arc-standard parser, solving a problem that was left open in (Goldberg and Nivre, 2013). We experimentally show that using these oracles in training yields superior parsing accuracies on many languages.},
+	issn = {2307-387X},
+	url = {https://tacl2013.cs.columbia.edu/ojs/index.php/tacl/article/view/302},
+	pages = {119--130}
+}
+@InProceedings{zhou-EtAl:2015:ACL-IJCNLP3,
+  author    = {Zhou, Hao  and  Zhang, Yue  and  Huang, Shujian  and  Chen, Jiajun},
+  title     = {A Neural Probabilistic Structured-Prediction Model for Transition-Based Dependency Parsing},
+  booktitle = {Proc. of ACL'15},
+  month     = {July},
+  year      = {2015},
+  address   = {Beijing, China},
+  publisher = {ACL},
+  pages     = {1213--1222},
+  url       = {http://www.aclweb.org/anthology/P15-1117}
+}
+@book{sutton1998introduction,
+  title={Introduction to reinforcement learning},
+  author={Sutton, Richard S and Barto, Andrew G},
+  volume={135},
+  year={1998},
+  publisher={MIT Press Cambridge}
+}
+@article{Watkins1992,
+author="Watkins, Christopher J.C.H.
+and Dayan, Peter",
+title="Technical Note: Q-Learning",
+journal="Machine Learning",
+year="1992",
+volume="8",
+number="3",
+pages="279--292",
+issn="1573-0565",
+doi="10.1023/A:1022676722315",
+url="http://dx.doi.org/10.1023/A:1022676722315"
+}
+@article{mnih2015human,
+  title={Human-level control through deep reinforcement learning},
+  author={Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David and Rusu, Andrei A and Veness, Joel and Bellemare, Marc G and Graves, Alex and Riedmiller, Martin and Fidjeland, Andreas K and Ostrovski, Georg and others},
+  journal={Nature},
+  volume={518},
+  number={7540},
+  pages={529--533},
+  year={2015},
+  publisher={Nature Publishing Group}
+}
+@InProceedings{ballesteros-dyer-smith:2015:EMNLP,
+  author    = {Ballesteros, Miguel  and  Dyer, Chris  and  Smith, Noah A.},
+  title     = {Improved Transition-based Parsing by Modeling Characters instead of Words with LSTMs},
+  booktitle = {Proc. of EMNLP-2015},
+  month     = {September},
+  year      = {2015},
+  address   = {Lisbon, Portugal},
+  publisher = {ACL},
+  pages     = {349--359},
+  url       = {http://aclweb.org/anthology/D15-1041}
+}
+@InProceedings{alberti-EtAl:2015:EMNLP,
+  author    = {Alberti, Chris  and  Weiss, David  and  Coppola, Greg  and  Petrov, Slav},
+  title     = {Improved Transition-Based Parsing and Tagging with Neural Networks},
+  booktitle = {Proc. of EMNLP-2015},
+  month     = {September},
+  year      = {2015},
+  address   = {Lisbon, Portugal},
+  publisher = {ACL},
+  pages     = {1354--1359},
+  url       = {http://aclweb.org/anthology/D15-1159}
+}
+@InProceedings{weiss-EtAl:2015:ACL-IJCNLP,
+  author    = {Weiss, David  and  Alberti, Chris  and  Collins, Michael  and  Petrov, Slav},
+  title     = {Structured Training for Neural Network Transition-Based Parsing},
+  booktitle = {Proc. of ACL'15},
+  month     = {July},
+  year      = {2015},
+  address   = {Beijing, China},
+  publisher = {ACL},
+  pages     = {323--333},
+  url       = {http://www.aclweb.org/anthology/P15-1032}
+}
+@article{nivre2007maltparser,
+  title={MaltParser: A language-independent system for data-driven dependency parsing},
+  author={Nivre, Joakim and Hall, Johan and Nilsson, Jens and Chanev, Atanas and Eryigit, G{\"u}lsen and K{\"u}bler, Sandra and Marinov, Svetoslav and Marsi, Erwin},
+  journal={NLE},
+  volume={13},
+  number={02},
+  pages={95--135},
+  year={2007},
+  publisher={Cambridge Univ Press}
+}
+@InProceedings{zhang-chan:2009:IWPT09,
+  author    = {Zhang, Lidan  and  Chan, Kwok Ping},
+  title     = {Dependency Parsing with Energy-based Reinforcement Learning},
+  booktitle = {Proc. of IWPT'09},
+  month     = {October},
+  year      = {2009},
+  address   = {Paris, France},
+  publisher = {ACL},
+  pages     = {234--237},
+  url       = {http://www.aclweb.org/anthology/W09-3838}
+}
+@InProceedings{zhang-clark:2008:EMNLP,
+  author    = {Zhang, Yue  and  Clark, Stephen},
+  title     = {A Tale of Two Parsers: {I}nvestigating and Combining Graph-based and Transition-based Dependency Parsing},
+  booktitle = {Proc. of EMNLP-2008},
+  month     = {October},
+  year      = {2008},
+  address   = {Honolulu, Hawaii},
+  publisher = {ACL},
+  pages     = {562--571},
+  url       = {http://www.aclweb.org/anthology/D08-1059}
+}
+@inproceedings{Toutanova:2003:FPT:1073445.1073478,
+ author = {Toutanova, Kristina and Klein, Dan and Manning, Christopher D. and Singer, Yoram},
+ title = {Feature-rich Part-of-speech Tagging with a Cyclic Dependency Network},
+ booktitle = {Proc. of the NAACL '03},
+ series = {NAACL '03},
+ year = {2003},
+ location = {Edmonton, Canada},
+ pages = {173--180},
+ numpages = {8},
+ url = {http://dx.doi.org/10.3115/1073445.1073478},
+ doi = {10.3115/1073445.1073478},
+ acmid = {1073478},
+ publisher = {ACL},
+ address = {Stroudsburg, PA, USA},
+}
+@inproceedings{marneffe:440:2006:lrec2006,
+    author = {M. Marneffe and B. Maccartney and C. Manning},
+    title = {Generating Typed Dependency Parses from Phrase Structure Parses},
+    month = {May},
+    year = {2006},
+    address = {Genoa, Italy},
+    publisher = {ELRA},
+    booktitle = {Proc. of LREC-2006},
+    url = {http://www.lrec-conf.org/proceedings/lrec2006/pdf/440_pdf.pdf},
+    note = {ACL Anthology Identifier: L06-1260},
+    }
+@article{TACL145,
+	author = {Goldberg, Yoav  and Nivre, Joakim },
+	title = {Training Deterministic Parsers with Non-Deterministic Oracles},
+	journal = {TACL},
+	volume = {1},
+	year = {2013},
+	keywords = {},
+	abstract = {Greedy transition-based parsers are very fast but tend to suffer from error propagation. This problem is aggravated by the fact that they are normally trained using oracles that are deterministic and incomplete in the sense that they assume a unique canonical path through the transition system and are only valid as long as the parser does not stray from this path. In this paper, we give a general characterization of oracles that are nondeterministic and complete, present a method for deriving such oracles for transition systems that satisfy a property we call arc decomposition, and instantiate this method for three well-known transition systems from the literature. We say that these oracles are dynamic, because they allow us to dynamically explore alternative and non-optimal paths during training — in contrast to oracles that statically assume a unique optimal path. Experimental evaluation on a wide range of data sets clearly shows that using dynamic oracles to train greedy parsers gives substantial improvements in accuracy. Moreover, this improvement comes at no cost in terms of efficiency, unlike other techniques like beam search. },
+	issn = {2307-387X},
+	url = {https://tacl2013.cs.columbia.edu/ojs/index.php/tacl/article/view/145},
+	pages = {403--414}
 }
